--- a/gel_cover_report_template.html
+++ b/gel_cover_report_template.html
@@ -48,7 +48,7 @@
 		<img style="max-height: 75px" src="\\gstt.local\shared\Genetics_Data2\Array\Audits and Projects\180216_100K_HTML_report_template\viapathlogo_white.png"/>
 		<table>
 				<tr>
-					<td style="text-align: left; font-weight: bold;">Genetics Centre</td>
+					<td style="text-align: left; font-weight: bold;">Genetics Laboratories</td>
 				</tr>
 				<tr>
 					<td style="text-align: left;">Guy's Hospital, 5th Floor Tower Wing</td>
@@ -112,7 +112,7 @@
 	</div>
 	<div class=result_summary>
 			<u>Result Summary</u>
-			<p>No Variant has been identified that is the clear cause of the clinical presentation</p>
+			<p>No variant has been identified that is the clear cause of the clinical presentation.</p>
 	</div>
 	<div class=result_text>
 		<p>Please find technical report overleaf.</p>
