--- a/gel_cover_report_template.html
+++ b/gel_cover_report_template.html
@@ -63,7 +63,7 @@
 	</div>
 	<hr width=100%>
 	<div class=report_title>
-		<h1>100,000 Genomes Project Report</h1>
+		<h1>100,000 Genomes Project Result</h1>
 	</div>
 	<div class=report_to>
 		<table>
@@ -111,11 +111,13 @@
 		</table>
 	</div>
 	<div class=result_summary>
-			<u>Result Summary</u>
-			<p>No variant has been identified that is the clear cause of the clinical presentation.</p>
+			<u>Summary of Findings</u>
+			<p>Whole genome sequencing has been completed by Genomics England and the primary analysis has not identified any underlying genetic cause of her clinical presentation.</p>
 	</div>
 	<div class=result_text>
-		<p>Please find technical report overleaf.</p>
+		<p>The genome sequencing data will be stored and may be re-analysed in the future as part of the on-going 100,000 Genomes Project. If this identifies a possible genetic diagnosis we will re-contact you.</p>
+		<p>Please can you thank the participant and family for their continuing participation in the 100,000 Genomes Project. This letter should be stored in their medical records as a record of the result. Please note that as the referring consultant, it is your responsibility to inform the family of the result. Please therefore kindly communicate this result to the family as neither Genomics England nor the South London NHS Genomic Medicine Centre are able to do this on your behalf.</p>
+		<p>Please see overleaf for details of the primary analysis.</p>
 		<p>Date created {{date_reported}}</p>
 	</div>
 	</body>
