Additional contact email added

--- a/gel_cover_report_template.html
+++ b/gel_cover_report_template.html
@@ -118,7 +118,9 @@
 		<p><strong>The genome sequencing data will be stored and may be re-analysed in the future as part of the on-going 100,000 Genomes Project. If this identifies a possible genetic diagnosis we will re-contact you.</strong></p>
 		<p>Please can you thank the participant and family for their continuing participation in the 100,000 Genomes Project. This letter should be stored in their medical records as a record of the result. Please note that as the referring consultant, it is your responsibility to inform the family of the result. <strong>Please therefore kindly communicate this result to the family as neither Genomics England nor the South London NHS Genomic Medicine Centre are able to do this on your behalf.</strong></p>
 		<p>Please see overleaf for details of the primary analysis.</p>
-		<p>Please contact the 100K team if you have any queries regarding this result: genetics100k@gstt.nhs.uk</p>
+		<p>Please contact the 100K team if you have any queries regarding this result:<br />
+        General queries - genetics100k@gstt.nhs.uk<br />
+        Clinical queries - clinicalgenomicsteam@gstt.nhs.uk</p>
 		<p>Date created {{date_reported}}</p>
 	</div>
 	</body>
