Remove OPA from html
Some cases are now going through Sapientia so OPA is incorrect

--- a/gel_cover_report_template.html
+++ b/gel_cover_report_template.html
@@ -106,7 +106,7 @@
 			</tr>
 			<tr>
 				<td style="text-align: left;">Interpretation Request ID:</td>
-				<td style="text-align: centre;">OPA{{IRID}}</td>
+				<td style="text-align: centre;">{{IRID}}</td>
 			</tr>
 		</table>
 	</div>
