Don't hard code summary of findings text

--- a/gel_cover_report_template.html
+++ b/gel_cover_report_template.html
@@ -112,7 +112,7 @@
 	</div>
 	<div class=result_summary>
 			<u>Summary of Findings</u>
-			<p>Whole genome sequencing has been completed by Genomics England and the primary analysis has not identified any underlying genetic cause of the clinical presentation.</p>
+			<p>{{summary_of_findings}}</p>
 	</div>
 	<div class=result_text>
 		<p><strong>The genome sequencing data will be stored and may be re-analysed in the future as part of the on-going 100,000 Genomes Project. If this identifies a possible genetic diagnosis we will re-contact you.</strong></p>
